Fixed contrast issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -37,8 +37,8 @@ h2 {
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 1.4rem;
     font-weight: bold;
-    -webkit-filter: drop-shadow(0.1rem 0.1rem 0.4rem #383636);
-	filter: drop-shadow(0.1rem 0.1rem 0.4rem #383636);
+    -webkit-filter: drop-shadow(0.1rem 0.1rem 0.3rem #476919);
+	filter: drop-shadow(0.1rem 0.1rem 0.3rem #476919);
 }
 
 h3,
@@ -88,6 +88,7 @@ p {
 	filter: drop-shadow(0.1rem 0.2rem 0.4rem #46454533);
 	margin: 1rem !important;
 	padding: .5rem 1rem;
+	text-shadow: .03rem -.03rem .2rem #273f09;
 }
 
 .square-card {
@@ -213,18 +214,19 @@ hr {
 }
 
 .hero-btn {
-	background-color: #81E157;
-	color: #fff;
+	background-color: #CAEF84;
+	color: #6D564D;
 	padding: .5rem 1rem;
-	-webkit-filter: drop-shadow(0.1rem 0.1rem 0.3rem #6b6a6a);
-	filter: drop-shadow(0.1rem 0.1rem 0.3rem #6b6a6a);
+	-webkit-filter: drop-shadow(0.1rem 0.1rem 0.2rem #476919);
+	filter: drop-shadow(0.1rem 0.1rem 0.2rem #476919);
+    font-weight: bold;
 }
 
 .hero-btn .icon {
-	color: #fff;
+	color: #6D564D ;
 	margin-left: .5rem;
-	-webkit-filter: drop-shadow(0.1rem 0.1rem 0.2rem #a19e9e);
-	filter: drop-shadow(0.1rem 0.1rem 0.2rem #a19e9e);
+	/*-webkit-filter: drop-shadow(0.1rem 0.1rem 0.2rem #a19e9e);
+	filter: drop-shadow(0.1rem 0.1rem 0.2rem #a19e9e);*/
 }
 
 .hero-btn:hover {
@@ -339,16 +341,6 @@ hr {
 	border-radius: 1.5rem;
 	font-size: .9rem;
 	padding: .5rem .1rem;
-}
-
-.btn-buy {
-	color: #8CC63F;
-	background-color: #fff;
-	font-weight: bold;
-}
-
-.btn-buy:hover {
-	color: #689231;
 }
 
 .add-to-cart-icon {
